Inverse the ui scales in wayland server before sending to clients

This patch inverses the ui scales before sending them as output device
scale factor.

Bug: 840107
Change-Id: I19eb520818281161abd53230b8cabcd0d40e1ebd
Component: wayland, scaling, aura shell
Reviewed-on: https://chromium-review.googlesource.com/1049115
Commit-Queue: Malay Keshav <malaykeshav@chromium.org>
Reviewed-by: David Reveman <reveman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#556693}
Former-commit-id: 8c569e5dfc3268efca4cadf70c38e160711f7b22